# rust-web-application

./: Cargo.toml  README
src/: main.rs
web/templates/: template.html
