[package]
name = "rust-web-application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5"
actix-web = "3"
serde = "1"
handlebars = { version = "3", features = ["dir_source"] }
chrono = "0.4.31"
env_logger = "0.10.1"
log = "0.4.20"
